--- a/index.html
+++ b/index.html
@@ -1,33 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<style>
-    *
-    {
-        padding: 0px;
-        margin: 0px;
-        box-sizing: border-box;
-    }
-  .header
-    {
-        background-image: url(img/header-bg.png);
-        background-repeat: no-repeat;
-        background-size: cover;
-       width: 100vw;
-       height:100vh;
-    }
-</style>
+<link rel="stylesheet" href="style.css">
+
 <body>
-  <div class="header">
-      <div class="header-content">
-          <h2> akhilesh reddy</h2>
-<h1>Wonderful GIFT </h1>
-      </div>
-  </div>
+    <div class="navbar">
+        <div class="first">
+            <div class="nav-content">Adventure</div>
+        </div>
+        <div class="second">
+            <div class="nav-content Home">Home</div>
+            <div class="nav-content">Teams</div>
+            <div class="nav-content">Explore</div>
+            <div class="nav-content">About</div>
+            <div class="nav-content contact">Contact</div>
+        </div>
+    </div>
+    <div class="header">
+        <div class="header-content">
+            <h2>Explore the Colorful World</h2>
+          <CENTER> <div class="line"></div></CENTER> 
+            <h1> A Wonderful GIFT </h1>
+            <button class="learnb"> Learn More </button>
+        </div>
+    </div>
+  <center>  <h1 class="events">Upcomimg Events</h1><div class="line"></div></center>
+  <div class="cards">
+      <div class="card">
+      <img src="./img/img2.png" alt="">
+      <center><h3>walking holiday</h3></center>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati numquam error, vitae, quam optio debitis aspernatur amet facere ipsam veritatis perferendis corporis! Fugit sunt odit hic ipsa sapiente quisquam, ullam error ea cum veniam saepe ipsam voluptatum nulla eius. Explicabo libero quisquam sequi vero illum?</p>
+    </div>
+      <div class="card">
+  <img src="./img/img1.png" alt="image not found akhilesh ">
+  <center>
+      <h3>Event Camp Track</h3>
+    </center>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem et ad. Enim maiores aperiam, nostrum architecto velit tempora, soluta tempore dolor pariatur sequi sint. Rerum quas repellat ipsam quaerat fuga perferendis tempora. Libero, iure sunt sint doloremque quibusdam hic?</p>
+        </div>
+    </div>
 </body>
+
 </html>
